# MultiAgentNewsTradingDemo

./: README.md  pyproject.toml
src/multi_agent_news_trading_demo/: ai_multi_agent_demo_notebook.ipynb
src/multi_agent_news_trading_demo/agents/: __init__.py  decision_agent.py  news_agent.py  sentiment_agent.py  stock_agent.py  summary_agent.py  utils.py
