[project]
name = "ai-multi-agent-demo"
version = "0.1.0"
description = "A multi-agent AI teaching demo: stocks, news, summarization, sentiment, and toy investment decisions."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"

# Your package lives in ai_agents/
packages = [
    { include = "ai_agents" }
]

dependencies = [
    "yfinance>=0.2.43",
    "pandas>=2.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "transformers>=4.40",
    "torch>=2.1",
]

# Optional extras (e.g., if using OpenAI for better summarization)
[project.optional-dependencies]
llm = [
    "openai>=1.12",
]

dev = [
    "ruff>=0.4",      # linter/formatter
    "black>=24.3",    # optional formatter
    "ipykernel>=6.28",
    "jupyter>=1.0",
]

[tool.uv]
# Ensures UX consistency
package = true

# uv scripts: allows `uv run notebook`
[tool.uv.scripts]
notebook = "jupyter notebook"
lab = "jupyter lab"

# Example agents test/demonstration script
demo = "python -m ai_agents"
